--- a/src/components/container/container.module.scss
+++ b/src/components/container/container.module.scss
@@ -4,4 +4,7 @@
   max-width: 1440px;
   margin: 150px auto;
   color: $nuclearYellow;
+  padding: 0px 20px;
+  @media screen and (min-width: 768px) {
+  }
 }
