--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -4,10 +4,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 20px 20px;
   align-items: center;
   max-width: 1440px;
   margin-inline: auto;
+  padding: 20px;
+
+  @media screen and (min-width: 768px) {
+    padding: 20px 20px;
+  }
 }
 
 ul.navbarList {
